<resources>
    <string name="app_name">Heluve katheya</string>
    <!-- Strings related to loginWithEmail -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="forget_password"><a href="Forget_password_link">Forget Password?</a></string><!--Need to update link here once it is done -->
    <string name="register">Don\'t Have Account? <a href="Register_Link">Sign Up</a> </string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="loginFailed">Failed to login!</string>
    <string name="clientId">685245915969-otdf9pke9m3pict3aumeppiaclt524v0.apps.googleusercontent.com</string>
    <string name="facebook_app_id">271623464228835</string>
    <string name="fb_login_protocol_scheme">fb271623464228835</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_feed">Home</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_fav">My Wishlist</string>
    <string name="menu_account">My Account</string>
    <string name="menu_language">Choose Language</string>
    <string name="menu_help">Help Centre</string>

    <string name="or">OR</string>
    <string name="next">NEXT</string>

    <string name="sel_catergory">Select your Categories</string>

    <string name="kavana">KAVANA</string>
    <string name="janapada">JANAPADA</string>
    <string name="moral">MORAL</string>
    <string name="kids">KIDS</string>
    <string name="literature">LITERATURE</string>
    <string name="history">HISTORY</string>


</resources>
