<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.heluvekatheya.heluvekatheya.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.heluvekatheya.heluvekatheya.ui.favourite.FavoriteFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.heluvekatheya.heluvekatheya.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_lang"
        android:name="com.heluvekatheya.heluvekatheya.ui.language.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.heluvekatheya.heluvekatheya.ui.language.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.heluvekatheya.heluvekatheya.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.heluvekatheya.heluvekatheya.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>